# nyc311

./: .gitignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  mkdocs.yml  noxfile.py  pyproject.toml
.claude/: launch.json  settings.json
.claude/agents/: factor-compat-auditor.md  release-auditor.md
.claude/commands/: bump.md  contract-check.md  release-check.md  run-case-study.md
.claude/skills/: factor-compat.md  release-bump.md  stats-module-discipline.md
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: cd.yml  ci.yml  compatibility.yml
docs/: agent-handoff-prompt.md  agent-kickoff-todo.md  api.md  architecture.md  changelog.md  cli.md  contributing.md  data-sources.md  examples.md  getting-started.md  index.md  integration.md  llms.txt  migration-v0-to-v1.md  mvp-roadmap.md  project-brief.md  releasing.md  sdk.md
docs/notes/: original-spec.md
docs/og-context/: agent-handoff-prompt.md  agent-kickoff-todo.md  api.md  data-sources.md  index.md  mvp-roadmap.md  project-brief.md
examples/: README.md  primitive-example-upgrade-handoff.md
examples/about-the-data/: README.md  analysis_logic.py  analyze.py  dates.py  download.py  download_logic.py  main.py  parsers.py  paths.py  pyproject.toml  tearsheet.py
examples/about-the-data/reports/: about-the-data-tearsheet.md
examples/about-the-data/reports/tables/: daily_counts_last_45_days.csv  rows_by_borough.csv  sample_summary.csv  top_complaint_types_citywide.csv
examples/about-the-data/scripts/: download-borough.sh
examples/borough-choropleth/: .gitignore  README.md  main.py  pyproject.toml
examples/boundary-qa/: README.md  main.py  pyproject.toml
examples/case_studies/resolution_equity/: .gitignore  01_fetch_data.py  02_build_panel.py  03_decomposition_and_anomalies.py  03_seasonal_decomposition.py  04_equity_analysis.py  05_spatial_analysis.py  06_changepoint_detection.py  06_policy_evaluation.py  07_reporting_bias.py  08_generate_findings.py  09_generate_tearsheets.py  FINDINGS.md  README.md  jellycell.toml  main.py  pyproject.toml  run_analysis.py
examples/case_studies/resolution_equity/data/: analysis_results.json  demographics.csv  demographics.csv.meta.json
examples/case_studies/resolution_equity/data/cache/: bronx_all_2020-01-01_2024-12-31_5000_desc.meta.json  brooklyn_all_2020-01-01_2024-12-31_5000_desc.meta.json  manhattan_all_2020-01-01_2024-12-31_5000_desc.meta.json  queens_all_2020-01-01_2024-12-31_5000_desc.meta.json  staten_island_all_2020-01-01_2024-12-31_5000_desc.meta.json
examples/case_studies/resolution_equity/figures/: equity_coefficients.csv  equity_gap_factors.csv  lisa_clusters.csv  spatial_lag_factors.csv
examples/case_studies/resolution_equity/manuscripts/: AUDIT.md  DIAGNOSTICS_CHECKLIST.md  FINDINGS.md  MANUSCRIPT.md  METHODOLOGY.md
examples/community-district-case-study/: README.md  main.py  pyproject.toml
examples/community-district-choropleth/: README.md  main.py  pyproject.toml
examples/data/: borough_boundaries.geojson  community_district_boundaries.geojson  service_requests_fixture.csv
examples/example-template/: .gitignore  README.md  main.py  pyproject.toml
examples/example-template/reports/: README.md
examples/factor-factory-quickstart/: README.md  main.py  pyproject.toml
examples/fetch-filtered-snapshot/: README.md  main.py  pyproject.toml
examples/mediation-cascade-resolution/: .gitignore  README.md  jellycell.toml  pyproject.toml  run_analysis.py
examples/mediation-cascade-resolution/artifacts/: mediation_results.json
examples/mediation-cascade-resolution/manuscripts/: AUDIT.md  DIAGNOSTICS_CHECKLIST.md  FINDINGS.md  MANUSCRIPT.md  METHODOLOGY.md
examples/notebooks/: boundary_qa.ipynb  community_district_case_study.ipynb  community_district_choropleth.ipynb  quickstart_sdk.ipynb  spatial_topic_comparison.ipynb  topic_eda.ipynb
examples/point-to-boundary-join/: README.md  main.py  pyproject.toml
examples/quickstart-sdk/: README.md  main.py  pyproject.toml
examples/scripts/: borough_choropleth.py  community_district_case_study.py  fetch_filtered_snapshot.py  point_to_boundary_join.py  quickstart_csv.py  topic_eda.py
examples/sdid-multi-borough-policy/: .gitignore  README.md  jellycell.toml  pyproject.toml  run_analysis.py
examples/sdid-multi-borough-policy/artifacts/: did_results.json  sdid_results.json
examples/sdid-multi-borough-policy/manuscripts/: AUDIT.md  DIAGNOSTICS_CHECKLIST.md  FINDINGS.md  MANUSCRIPT.md  METHODOLOGY.md
examples/spatial-join-qa/: README.md  main.py  pyproject.toml
examples/spatial-topic-comparison/: README.md  main.py  pyproject.toml
examples/topic-eda/: .gitignore  README.md  main.py  pyproject.toml
examples/utils/: __init__.py  display.py  filters.py  geo.py  paths.py  plotting.py
scripts/: audit_implementation.py  audit_public_api.py  smoke_installed_package.py
src/nyc311/: __init__.py  __main__.py  _not_implemented.py  _tabular.py  aggregation.py  analytics.py  boundaries.py  cli.py  coverage.py  dataframes.py  exporters.py  filters.py  loaders.py  loaders_csv.py  loaders_socrata.py  models.py  pipeline.py  plotting.py  presets.py  processors.py  spatial.py  topics.py
tests/: test_advanced_ts.py  test_bayesian.py  test_boundaries_and_geojson.py  test_causal.py  test_cli.py  test_closed_date.py  test_dataframes.py  test_equity.py  test_exporters.py  test_factor_factory_adapter.py  test_factor_factory_engines.py  test_factors.py  test_fetch_and_resolution.py  test_geographies.py  test_geographies_optional.py  test_hawkes.py  test_io_cache.py  test_loaders.py  test_models.py  test_package.py  test_pipeline.py  test_placeholders.py  test_presets.py  test_processors.py  test_socrata_loader.py  test_spatial.py  test_spatial_regression.py  test_stats.py  test_temporal.py  test_timeseries_helpers.py  test_topic_expansion.py
tests/fixtures/: community_district_boundaries.geojson  (+1 more)
(+133 files in other folders)
