[build-system]
requires = ["hatchling>=1.26", "hatch-vcs"]
build-backend = "hatchling.build"


[project]
name = "nyc311"
authors = [
  { name = "Blaise Albis-Burdige" },
]
description = "Python toolkit for reproducible NYC 311 complaint analysis via a typed SDK and CLI."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = [
  "nyc",
  "nyc311",
  "311",
  "civic-tech",
  "open-data",
  "geospatial",
  "analytics",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
  "nyc-geo-toolkit>=0.1.7,<0.2.0",
]

[project.scripts]
nyc311 = "nyc311.cli:main"

[project.urls]
Homepage = "https://github.com/random-walks/nyc311"
"Documentation" = "https://nyc311.readthedocs.io/"
Portfolio = "https://blaiseab.com/"
"Bug Tracker" = "https://github.com/random-walks/nyc311/issues"
Discussions = "https://github.com/random-walks/nyc311/discussions"
Changelog = "https://github.com/random-walks/nyc311/releases"

[project.optional-dependencies]
dataframes = [
    "pandas>=2.3.3",
]
plotting = [
    "matplotlib>=3.10.8",
]
spatial = [
    "contextily>=1.6.2",
    "geopandas>=1.1",
    "shapely>=2.1",
]
science = [
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "scipy>=1.15.3",
]
stats = [
    "esda>=2.6",
    "libpysal>=4.10",
    "linearmodels>=6.0",
    "pandas>=2.3.3",
    "ruptures>=1.1",
    "scipy>=1.15.3",
    "spreg>=1.4",
    "statsmodels>=0.14",
]
bayes = [
    "pymc>=5.16",
]
all = [
    "contextily>=1.6.2",
    "esda>=2.6",
    "geopandas>=1.1",
    "libpysal>=4.10",
    "linearmodels>=6.0",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "ruptures>=1.1",
    "scipy>=1.15.3",
    "shapely>=2.1",
    "spreg>=1.4",
    "statsmodels>=0.14",
]


[dependency-groups]
test = [
  "pytest >=9",
  "pytest-cov >=7",
  "typing-extensions >=4.0",
]
dev = [
  { include-group = "test" },
  "mypy >=1.18",
  "pandas-stubs >=2.3.0",
  "pylint >=3.3",
  "ruff >=0.12",
]
docs = [
    "markdown>=3.9",
    "mdx-include>=1.4.2",
    "mkdocs-material>=9.1.19",
    "mkdocs>=1.1.2",
    "mkdocstrings-python>=1.18.2",
    "pyyaml>=6.0.1",
]

[tool.uv]
default-groups = ["dev"]


[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/nyc311/_version.py"

[tool.hatch.envs.default]
dependency-groups = ["dev"]

[tool.hatch.envs.hatch-test]
dependency-groups = ["test"]
env-vars.PYTHONWARNDEFAULTENCODING = "1"


[tool.pytest]
minversion = "9.0"
addopts = ["-ra", "--showlocals"]
strict = true
markers = [
  "unit: fast local tests for package development",
  "fetch: tests focused on CSV or Socrata data fetching behavior",
  "integration: heavier workflow or live-service tests",
  "network: tests that reach external services",
  "optional: tests that exercise optional dependency-backed features",
]
filterwarnings = [
  "error",
]
log_level = "INFO"
testpaths = [
  "tests",
]


[tool.coverage]
run.source = ["nyc311"]
report.exclude_also = [
  '\.\.\.',
  'if typing.TYPE_CHECKING:',
]

[tool.mypy]
files = ["src", "tests"]
python_version = "3.10"
warn_unused_configs = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "nyc311.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
    "differences",
    "differences.*",
    "esda",
    "esda.*",
    "libpysal",
    "libpysal.*",
    "linearmodels",
    "linearmodels.*",
    "mgwr",
    "mgwr.*",
    "pymc",
    "pymc.*",
    "pyfixest",
    "pyfixest.*",
    "pysyncon",
    "pysyncon.*",
    "rdrobust",
    "rdrobust.*",
    "ruptures",
    "ruptures.*",
    "scipy",
    "scipy.*",
    "spreg",
    "spreg.*",
    "statsmodels",
    "statsmodels.*",
    "tick",
    "tick.*",
]
ignore_missing_imports = true


[tool.ruff]
show-fixes = true

[tool.ruff.lint]
extend-select = [
  "ARG",    # flake8-unused-arguments
  "B",      # flake8-bugbear
  "BLE",    # flake8-blind-except
  "C4",     # flake8-comprehensions
  "DTZ",    # flake8-datetimez
  "EM",     # flake8-errmsg
  "EXE",    # flake8-executable
  "FA",     # flake8-future-annotations
  "FLY",    # flynt
  "FURB",   # refurb
  "G",      # flake8-logging-format
  "I",      # isort
  "ICN",    # flake8-import-conventions
  "ISC",    # flake8-implicit-str-concat
  "LOG",    # flake8-logging
  "NPY",    # NumPy specific rules
  "PD",     # pandas-vet
  "PERF",   # perflint
  "PGH",    # pygrep-hooks
  "PIE",    # flake8-pie
  "PL",     # pylint
  "PT",     # flake8-pytest-style
  "PTH",    # flake8-use-pathlib
  "PYI",    # flake8-pyi
  "Q",      # flake8-quotes
  "RET",    # flake8-return
  "RSE",    # flake8-raise
  "RUF",    # Ruff-specific
  "SIM",    # flake8-simplify
  "SLOT",   # flake8-slots
  "T10",    # flake8-debugger
  "T20",    # flake8-print
  "TC",     # flake8-type-checking
  "TRY",    # tryceratops
  "UP",     # pyupgrade
  "YTT",    # flake8-2020
]
ignore = [
  "EM",       # Exception message style is too noisy for this repo
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
  "RUF022",   # __all__ sorting is low value, especially for generated files
  "SIM103",   # Explicit guard clauses are clearer in this codebase
  "TC",       # Type-checking-only import shuffling is unnecessary here
  "TRY",      # Long exception messages are acceptable for user-facing validation
  "FURB110",  # Prefer explicit ternaries where they read better
]
# Uncomment if using a _compat.typing backport
# typing-modules = ["nyc311._compat.typing"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20", "PLC0415"]
"src/nyc311/_version.py" = ["Q000", "RUF022"]
"src/nyc311/factors/_base.py" = ["PLC0415"]
"src/nyc311/factors/_advanced.py" = ["PLC0415"]
"src/nyc311/temporal/*.py" = ["PLC0415"]
"src/nyc311/stats/*.py" = ["PLC0415"]
"noxfile.py" = ["EXE001", "T20"]
"examples/**/*.py" = ["T20"]
"examples/about-the-data/**/*.py" = [
  "ARG001",
  "BLE001",
  "B007",
  "DTZ",
  "I001",
  "PD010",
  "PD011",
  "PERF203",
  "PERF401",
  "PLC0415",
  "RUF001",
]
"examples/case_studies/**/*.py" = [
  "ARG001",
  "BLE001",
  "DTZ",
  "EXE001",
  "I001",
  "PD010",
  "PD011",
  "PERF203",
  "PERF401",
  "PLC0415",
  "T20",
]
"docs/examples/**" = ["T20"]


[tool.pylint]
py-version = "3.10"
ignore-paths = [".*/_version.py"]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "duplicate-code",
  "design",
  "fixme",
  "line-too-long",
  "missing-module-docstring",
  "missing-function-docstring",
  "wrong-import-position",
]
